2003-10-31  Bruno Haible  <bruno@clisp.org>

	* configure.ac: Remove argument of FIX_MAKEFILE_COMPILE.

2003-09-16  Bruno Haible  <bruno@clisp.org>

	Portability to SunOS 4.
	* configure.ac: Also check for strtoul and atexit.

2003-08-29  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (config.h.msvc): Define HAVE_DECL__SNPRINTF,
	HAVE_DECL__SNWPRINTF.

2003-08-24  Bruno Haible  <bruno@clisp.org>

	* configure.ac: Define DLL_VARIABLE in config.h through AH_BOTTOM.

2003-08-23  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (config.h_vms): Define HAVE_READLINK and HAVE_WCSLEN.
	(config.h.msvc): Define HAVE_WCSLEN and ssize_t.

2003-08-23  Bruno Haible  <bruno@clisp.org>

	* configure.ac: Invoke gl_USE_SYSTEM_EXTENSIONS.

2003-08-23  Bruno Haible  <bruno@clisp.org>

	* configure.ac: Invoke AM_STDBOOL_H instead of gt_STDBOOL_H.

2003-07-01  Bruno Haible  <bruno@clisp.org>

	* configure.ac: Invoke gl_FUNC_READLINK.

2003-06-19  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (config.h_vms, config.h.msvc): Update.
	(intl/libgnuintl.h_vms, intl/libgnuintl.h.msvc-static): New rule.
	(all-local): Depend on them.
	(intl/libgnuintl.h.msvc-shared): Also perform some AC_SUBST
	substitutions.

2003-06-19  Bruno Haible  <bruno@clisp.org>

	* configure.ac: New option --disable-libasprintf.

2003-06-08  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (config.h_vms): Don't define HAVE_ENVIRON_DECL.
	Reported by Jouk Jansen <joukj@hrem.stm.tudelft.nl>.

2003-05-22  Bruno Haible  <bruno@clisp.org>

	* gettext-0.12.1 released.

2003-05-20  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (config.h_vms, config.h.msvc,
	intl/libgnuintl.h.msvc-shared): Don't use $< here.

2003-05-19  Bruno Haible  <bruno@clisp.org>

	* windows/intl.rc: Include <winver.h>.
	Reported by Perry Rapp.

2003-05-17  Bruno Haible  <bruno@clisp.org>

	* gettext-0.12 released.

2003-05-15  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (config.h_vms, config.h.msvc): Define HAVE_DECL_STRERROR.
