@@ -1,3 +1,7 @@
+2003-11-04  Bruno Haible  <bruno@clisp.org>
+
+	* Makefile.am (MAKEINFO): Set LC_MESSAGES and LC_ALL to empty as well.
+
 2003-10-19  Bruno Haible  <bruno@clisp.org>
 
 	* gettext.texi (PO Files): Mention qt-format.
